Adding Travis CI status icon

--- a/README
+++ b/README
@@ -2,3 +2,6 @@ commerce_order_cleanup
 ======================
 
 Allows to delete orders by various filters(like last changed date, status).
+
+
+[![Build Status](https://travis-ci.org/vijaycs85/commerce_order_cleanup.svg?branch=7.x-1.x)](https://travis-ci.org/vijaycs85/commerce_order_cleanup)
